--- a/StatisticsforDataScience.ipynb
+++ b/StatisticsforDataScience.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM64QcfEuHBCo+L/vOt22HB",
+      "authorship_tag": "ABX9TyMByxYO/xrPKJqvHRDormmI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,24 +86,24 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "42079cbb-e02d-4d1f-d64c-0c4fcf848a62"
+        "outputId": "87e13ec8-d0be-4ccb-c267-217e8e0bb6b4"
       },
       "source": [
         "!rm -rf ./MachineLearning\n",
         "!git clone https://github.com/mkjubran/MachineLearning.git"
       ],
-      "execution_count": 5,
+      "execution_count": 223,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Cloning into 'MachineLearning'...\n",
-            "remote: Enumerating objects: 7, done.\u001b[K\n",
-            "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (6/6), done.\u001b[K\n",
-            "remote: Total 257 (delta 1), reused 6 (delta 1), pack-reused 250\u001b[K\n",
-            "Receiving objects: 100% (257/257), 72.83 MiB | 28.06 MiB/s, done.\n",
-            "Resolving deltas: 100% (116/116), done.\n"
+            "remote: Enumerating objects: 15, done.\u001b[K\n",
+            "remote: Counting objects:   6% (1/15)\u001b[K\rremote: Counting objects:  13% (2/15)\u001b[K\rremote: Counting objects:  20% (3/15)\u001b[K\rremote: Counting objects:  26% (4/15)\u001b[K\rremote: Counting objects:  33% (5/15)\u001b[K\rremote: Counting objects:  40% (6/15)\u001b[K\rremote: Counting objects:  46% (7/15)\u001b[K\rremote: Counting objects:  53% (8/15)\u001b[K\rremote: Counting objects:  60% (9/15)\u001b[K\rremote: Counting objects:  66% (10/15)\u001b[K\rremote: Counting objects:  73% (11/15)\u001b[K\rremote: Counting objects:  80% (12/15)\u001b[K\rremote: Counting objects:  86% (13/15)\u001b[K\rremote: Counting objects:  93% (14/15)\u001b[K\rremote: Counting objects: 100% (15/15)\u001b[K\rremote: Counting objects: 100% (15/15), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (13/13), done.\u001b[K\n",
+            "remote: Total 265 (delta 5), reused 12 (delta 2), pack-reused 250\u001b[K\n",
+            "Receiving objects: 100% (265/265), 72.83 MiB | 28.38 MiB/s, done.\n",
+            "Resolving deltas: 100% (120/120), done.\n"
           ],
           "name": "stdout"
         }
@@ -136,7 +136,7 @@
         "id": "PLzd7MM1IZL8"
       },
       "source": [
-        "In the previous tutorial we read the \"cars.csv\" file that was cloned using the commands in section \"Pandas DataFrames\". This \"cars.csv\" file is stored and can be read using pd.read_csv."
+        "In the previous tutorial we read the \"carprices.csv\" file that was cloned using the commands in section \"Pandas DataFrames\". This \"cars.csv\" file is stored and can be read using pd.read_csv."
       ]
     },
     {
@@ -1227,10 +1227,569 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "m7JfDwPaNnLz"
+      },
+      "source": [
+        "## Check for NaN in Pandas DataFrame and replace it with the mean"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "OOJhtBAhO1N4"
+      },
+      "source": [
+        "A car prices database is stored in a .csv file in \"./MachineLearning/1_Regression/carprices_missing.csv\" file. This file contains some missing information. Let us first read and display the data in the .csv file. \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 452
+        },
+        "id": "FQ2Qc4QrPndO",
+        "outputId": "34c34f73-bf41-4c9e-f010-952162ae5573"
+      },
+      "source": [
+        "# Import the cars.csv data: cars\n",
+        "carsM = pd.read_csv(\"./MachineLearning/1_Regression/carprices_missing.csv\")\n",
+        "\n",
+        "# Print out cars\n",
+        "carsM"
+      ],
+      "execution_count": 246,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Car Model</th>\n",
+              "      <th>Mileage</th>\n",
+              "      <th>Sell Price($)</th>\n",
+              "      <th>Age(yrs)</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>BMW X5</td>\n",
+              "      <td>69000.0</td>\n",
+              "      <td>18000.0</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>BMW X5</td>\n",
+              "      <td>35000.0</td>\n",
+              "      <td>34000.0</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>BMW X5</td>\n",
+              "      <td>57000.0</td>\n",
+              "      <td>26100.0</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>BMW X5</td>\n",
+              "      <td>22500.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>BMW X5</td>\n",
+              "      <td>46000.0</td>\n",
+              "      <td>31500.0</td>\n",
+              "      <td>4</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>Audi A5</td>\n",
+              "      <td>59000.0</td>\n",
+              "      <td>29400.0</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>Audi A5</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>32000.0</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>Audi A5</td>\n",
+              "      <td>72000.0</td>\n",
+              "      <td>19300.0</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>Audi A5</td>\n",
+              "      <td>91000.0</td>\n",
+              "      <td>12000.0</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>Mercedez Benz C class</td>\n",
+              "      <td>67000.0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>6</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>10</th>\n",
+              "      <td>Mercedez Benz C class</td>\n",
+              "      <td>83000.0</td>\n",
+              "      <td>20000.0</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>11</th>\n",
+              "      <td>Mercedez Benz C class</td>\n",
+              "      <td>79000.0</td>\n",
+              "      <td>21000.0</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>12</th>\n",
+              "      <td>Mercedez Benz C class</td>\n",
+              "      <td>59000.0</td>\n",
+              "      <td>33000.0</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                Car Model  Mileage  Sell Price($)  Age(yrs)\n",
+              "0                  BMW X5  69000.0        18000.0         6\n",
+              "1                  BMW X5  35000.0        34000.0         3\n",
+              "2                  BMW X5  57000.0        26100.0         5\n",
+              "3                  BMW X5  22500.0            NaN         2\n",
+              "4                  BMW X5  46000.0        31500.0         4\n",
+              "5                 Audi A5  59000.0        29400.0         5\n",
+              "6                 Audi A5      NaN        32000.0         5\n",
+              "7                 Audi A5  72000.0        19300.0         6\n",
+              "8                 Audi A5  91000.0        12000.0         8\n",
+              "9   Mercedez Benz C class  67000.0            NaN         6\n",
+              "10  Mercedez Benz C class  83000.0        20000.0         7\n",
+              "11  Mercedez Benz C class  79000.0        21000.0         7\n",
+              "12  Mercedez Benz C class  59000.0        33000.0         5"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 246
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Z4xJSOjzNxZQ"
+      },
+      "source": [
+        "To check if the DataFrame contains any NaN"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t505xDXPN6XJ",
+        "outputId": "35eeb087-7567-4f95-c72e-14839bd7892b"
+      },
+      "source": [
+        "carsM.isnull().values.any()"
+      ],
+      "execution_count": 247,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 247
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fUpoIGLGQizR"
+      },
+      "source": [
+        "Now, to check if **Car Model** has any NaN"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ydk9yZD8Qvfq",
+        "outputId": "9245d5bb-ff30-422d-d537-f4014e8cd132"
+      },
+      "source": [
+        "carsM['Car Model'].isnull().values.any()"
+      ],
+      "execution_count": 248,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 248
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "VuTq21a5Rpfe"
+      },
+      "source": [
+        "Let us check which of the other columns has NaN values"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OjUz4Cn_Rx4J",
+        "outputId": "f56f1453-677a-4104-cd62-7b04f26b1b63"
+      },
+      "source": [
+        "print(carsM['Mileage'].isnull().values.any())\n",
+        "print(carsM['Sell Price($)'].isnull().values.any())\n",
+        "print(carsM['Age(yrs)'].isnull().values.any())\n"
+      ],
+      "execution_count": 251,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n",
+            "True\n",
+            "False\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N1gz7vj_SH3g"
+      },
+      "source": [
+        "Instead of checking every column, we will use the isnull.sum() method to determine the number of 'NaN' in each column."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m4W6NzNMSMqW",
+        "outputId": "231ba71c-0898-4d70-ac5c-d404f9ada025"
+      },
+      "source": [
+        "carsM.isnull().sum()"
+      ],
+      "execution_count": 253,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Car Model        0\n",
+              "Mileage          1\n",
+              "Sell Price($)    2\n",
+              "Age(yrs)         0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 253
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "K9MiPt6IH_vc"
       },
       "source": [
-        "**Exercise 2.3:** Write a code to read the data in \"Mall_Customers_short.csv\" using and display it as pandas DataFrame. This file was cloned to the \"./MachineLearning/1_Regression/\" folder."
+        "##**Exercise 3.1:** \n",
+        "A Retail Data Customer Summary database is downloaded from Kaglle.com (https://www.kaggle.com/funxexcel/retail-data-customer-summary-learn-pandas-basics). The database is stored in the \"./MachineLearning/1_Regression/1_Sales.csv\" file. Write a pythone code to read the .csv file. Then use the data in this file to determine the following \\\\\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "olDEJIcXLpjx"
+      },
+      "source": [
+        "##Read the .csv file here\n"
+      ],
+      "execution_count": 233,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zjhYEa0QLhMT"
+      },
+      "source": [
+        "1- The average Sales of Amy \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Fv4ped2sLx5R"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 234,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "tobZLAEtLCHM"
+      },
+      "source": [
+        "2- The total Sales of Amy \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aDE3jgfvLy43"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 235,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zqUTnSJ5LEkp"
+      },
+      "source": [
+        "3- The average units sold by Amy \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LL5nMPOVL0Xw"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 236,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zO8n7cIoLGsv"
+      },
+      "source": [
+        "4- The total units sold by Amy \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Yzo0STirL1qR"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 237,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "B2hom3AlLIn0"
+      },
+      "source": [
+        "5- The average Sales of Amy and Bob \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dJM7TPJgL2mT"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 238,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yumphDzoLKhY"
+      },
+      "source": [
+        "6- The total Sales of Amy and Bob \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9z6VqbSrL382"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 239,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RfuqbgXPLMeU"
+      },
+      "source": [
+        "7- The average units sold by Amy and Bob \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HEYR9jfFL405"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 240,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "fzmaM1z-LOYL"
+      },
+      "source": [
+        "8- The total units sold by Amy and Bob \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CN7OBLtQL52y"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 241,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "W3ssz5QLLQVN"
+      },
+      "source": [
+        "9- The Total items sold by all sales representatives in Jan \\\\"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZbzkB-M0L66W"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 242,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Qg6PYgdYLSZB"
+      },
+      "source": [
+        "10- The Total items sold by all sales representatives in Jan and Feb"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qwxE48NyL7yI"
+      },
+      "source": [
+        "## Write your code here\n"
+      ],
+      "execution_count": 243,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lRn8oWrtMBlK"
+      },
+      "source": [
+        "11-Replace 'NaN' with the mean values of the corresponding column."
       ]
     },
     {
@@ -1239,9 +1798,9 @@
         "id": "tYIFrudWFObl"
       },
       "source": [
-        "## Write your code here\n"
+        "## Write your code here"
       ],
-      "execution_count": null,
+      "execution_count": 244,
       "outputs": []
     },
     {
@@ -1261,7 +1820,7 @@
       "source": [
         "## Write your code here\n"
       ],
-      "execution_count": null,
+      "execution_count": 245,
       "outputs": []
     },
     {
